--- a/src/components/CategoryItems.module.css
+++ b/src/components/CategoryItems.module.css
@@ -28,11 +28,14 @@
 .itemDetails {
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-between; /* Spread content between text and icons */
 }
 
 .itemDetails > div {
   flex-grow: 1;
+}
+.itemText {
+  flex-grow: 1; /* Push the text to take up the available space */
 }
 
 .itemDetails button {
@@ -42,3 +45,10 @@
 .itemDetails .MuiIconButton-root {
   padding: 5px;
 } 
+.iconContainer {
+  display: flex;
+  gap: 8px; /* Space between icons */
+}
+.iconContainer .MuiIconButton-root {
+  padding: 5px;
+}
