--- a/src/styles/login.module.css
+++ b/src/styles/login.module.css
@@ -1,4 +1,7 @@
 /* payca_admin/src/styles/login.module.css */
+
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap');
+
 .container {
     display: flex;
     align-items: center;
